# TerraMind-NYC-Adapters

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: smoke.yml
docs/: TRAINING.md
eval/configs/: buildings.yaml
eval/reports/: buildings.md  lulc.md  threshold_sweep.json
src/terramind_nyc_adapters/: __init__.py  _energy.py  _metrics.py  _provenance.py  data.py  eval_buildings.py  eval_lulc.py
