[project]
name = "terramind-nyc-adapters"
version = "0.1.0"
description = "TerraMind 1.0 LoRA adapters for NYC: buildings, LULC, TiM. Multi-modal Sentinel-2 + Sentinel-1 + DEM."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Adam Rahman", email = "msrahmanadam@gmail.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch>=2.4",
    "terratorch>=0.10",
    "rasterio>=1.3",
    "numpy>=1.26",
    "huggingface-hub>=0.34,<1",
    "safetensors>=0.4",
    "geopandas>=0.14",
    "pyproj>=3.6",
    "shapely>=2.0",
    "scipy>=1.11",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terramind_nyc_adapters"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
